Fix shifting elements upon display of project error message

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,11 +70,15 @@ input {
 .save-project-container {
   display: flex;
   border-radius: 20px;
-  height: 3rem;
+  height: 2.5rem;
   align-items: center;
   justify-content: center;
   /* padding: 0 2rem; */
   margin: 0.75rem 0 0;
+}
+
+.project-error-container {
+	height: 1rem;
 }
 
 .project-error {
@@ -88,12 +92,12 @@ input {
 
 .project-input {
 	width: 12rem;
-	height: 60%;
+	height: 73%;
 }
 
 .save-project-btn {
 	width: 10rem;	
-	height: 60%;
+	height: 73%;
 	font-size: 1rem;
 }
 
